# Parwana

./: .claudeignore  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURAL_CRITIQUE_RESPONSE.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  Cargo.toml  FREEZE_POLICY.md  PRINCIPAL_ENGINEER_PLAN.md  README.md  README.md.txt  SEAL_CONTRACT_DEPLOYMENT.md  SECURITY.md  UNWIRED.md  csv-cli-tutorial.md  csv-core-TOMBSTONE.md  csv-dev-plan.md  deny.toml  repomix-output.xml  start.sh  stop.sh  task_progress.md
csv-accountability/: Cargo.toml
csv-accountability-verify/: Cargo.toml
csv-accountability-verify/src/: lib.rs  reason_codes.rs
csv-accountability-verify/tests/: conformance.rs  differential.rs
csv-accountability/src/: anchor.rs  assurance.rs  authority.rs  bundle.rs  context.rs  dispute.rs  evidence.rs  execution.rs  id.rs  identifiers.rs  intent.rs  lib.rs  mandate.rs  preservation.rs  profile.rs  receipt.rs  registry.rs  state.rs  verification.rs
csv-accountability/tests/: assurance_profile.rs  authority_reconstruction.rs  dispute_bundle.rs  evidence_graph.rs  execution_receipt.rs  profile_document.rs  state_semantics.rs  verification_context.rs
csv-adapter-factory/: Cargo.toml
csv-adapter-factory/src/: aptos.rs  bitcoin.rs  ethereum.rs  lib.rs  mint_signer.rs  solana.rs  sui.rs  wallet_factory.rs
csv-adapter-factory/tests/: bitcoin_factory_test.rs
csv-adapters/csv-adapter-core/: Cargo.toml
csv-adapters/csv-aptos/: Cargo.toml  README.md
csv-adapters/csv-bitcoin/: Cargo.toml  README.md
csv-algebra/: Cargo.toml  README.md
csv-algebra/src/: error.rs  finality.rs  lib.rs  proof.rs  replay.rs  state.rs  transfer.rs
csv-chain-ports/: Cargo.toml
csv-chain-ports/src/: lib.rs
csv-cli/: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  development-plan.txt
csv-cli/src/: chain_management.rs  config.rs  contract_view.rs  encrypt.rs  main.rs  output.rs  state.rs  wallet_identity.rs
csv-cli/tests/: app_contract_behavior.rs  architecture_compliance.rs  integration_tests.rs
csv-codec/: Cargo.toml  README.md
csv-codec/src/: accountability.rs  byte_order.rs  canonical.rs  decode.rs  encode.rs  error.rs  lib.rs  manual_encoder.rs  schema.rs  versioning.rs
csv-content/: Cargo.toml  README.md
csv-content/src/: addressing.rs  attachments.rs  claims.rs  content_tree.rs  encryption.rs  lib.rs  manifest.rs  participants.rs  recipient_wrap.rs  resource_accounting.rs  selective_disclosure.rs
csv-content/tests/: content_tests.rs
csv-contract-bindings/: Cargo.toml  README.md
csv-contract-bindings/src/: abi_constitution.rs  common.rs  csv_seal.rs  deployment.rs  lib.rs  mint_contract.rs  sanad_contract.rs  seal_contract.rs
csv-coordinator/: Cargo.toml  README.md
csv-coordinator/src/: cell.rs  circuit.rs  handler.rs  lib.rs  memory.rs  negotiation.rs  router.rs  wallet.rs  wallet_factory.rs
csv-core/: CHANGELOG.md  Cargo.toml  README.md  build.rs  clippy.toml
csv-core/archived/: atomic_swap.rs.bak  performance.rs.bak  stealth.rs.bak
csv-core/examples/: basic_right.rs  basic_sanad.rs  commitment_chain.rs
csv-core/src/: abi_constitution.rs  adapter.rs  backend.rs  canonical_events.rs  certification.rs  chain_capabilities.rs  chain_config.rs  chain_specific.rs  client.rs  collections.rs  commitment.rs  commitment_chain.rs  commitments_ext.rs  compatibility.rs  config_validation.rs  consignment.rs  cross_chain.rs  dag.rs  data_authority.rs  deployment.rs  deterministic_recovery.rs  envelope.rs  error.rs  event.rs  events.rs  failure_domains.rs  finality.rs  finality_anchor.rs  finality_guarantee.rs  genesis.rs  hardening.rs  lease.rs  lib.rs  mcp.rs  merkle.rs  monitor.rs  performance.rs  persisted_transition.rs  proof.rs  proof_pipeline.rs  (+24 more)
csv-core/tests/: adversarial.rs  audit_impl_smoke.rs  chains_load.rs  contract_equivalence.rs  contracts_equivalence.rs  differential_verification.rs  domain_separation_rules.rs  fuzz_corpus.rs  golden.rs  governance_rules.rs  hashing_rules.rs  invariant_10_signature_scheme.rs  invariant_11_zk_verifier.rs  invariant_1_seal_ids.rs  invariant_2_commitment_anchor.rs  invariant_3_consignment_validator.rs  invariant_4_native_units.rs  invariant_5_transfer_state.rs  invariant_6_seal_registry.rs  invariant_7_domain_separation.rs  invariant_8_verification_result.rs  invariant_9_replay_cas.rs  proof_encoding_rules.rs  reorg_simulation.rs  replay_protection_rules.rs  seal_consumption.rs  seal_semantics_rules.rs  serialization_rules.rs  state_machine.rs  typestate_compile_fail.rs  versioning_rules.rs
csv-examples/: Cargo.toml  README.md  gaming.rs  performance.rs
csv-examples/advanced/: gaming.rs  parallel_verification.rs  performance.rs
csv-examples/cli-tutorial/: content-management.sh  cross-chain-transfer.sh  csv-cli-tutorial.md  off-chain.sh  quick-start.sh  trust-management.sh
csv-examples/examples/: test_eth_derivation.rs
csv-examples/getting-started/: subscriptions.rs
csv-hash/: Cargo.toml  README.md
csv-hash/src/: canonical.rs  chain_id.rs  commit_mux.rs  commitment.rs  dag.rs  domain_hash.rs  domain_separation.rs  hash_registry.rs  lib.rs  nullifier.rs  proof_commitments.rs  registry.rs  sanad.rs  seal.rs  tagged_hash.rs
csv-hash/tests/: merkle_tests.rs
csv-observability/: Cargo.toml  README.md
csv-observability/src/: lib.rs  performance.rs  runtime_health.rs
csv-p2p/: Cargo.toml  README.md  SECURITY.md
csv-p2p/src/: ipfs.rs  lib.rs  nostr.rs  proof_delivery.rs
csv-proof/: Cargo.toml  README.md
csv-proof/src/: certification.rs  chain_config.rs  commitment_chain.rs  commitments_ext.rs  cross_chain.rs  dag.rs  error.rs  events.rs  lib.rs  mandate_signature.rs  proof.rs  (+9 more)
csv-protocol/: Cargo.toml  README.md
csv-runtime/: ADVERSARIAL_REVIEW.md  CHANGELOG.md  Cargo.toml  README.md
csv-schema/: Cargo.toml  README.md
csv-sdk/: Cargo.toml  README.md
csv-storage/: Cargo.toml  README.md
csv-testkit/: Cargo.toml  README.md
csv-verifier/: Cargo.toml  README.md
csv-wallet/: Cargo.toml  README.md
csv-wire/: Cargo.toml  README.md
fuzz/: Cargo.toml  README.md  json_rpc_fuzz.rs
(+753 files in other folders)
