[package]
name = "csv-accountability-verify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Deterministic, side-effect-free verification for Parwana accountability bundles"

[dependencies]
csv-accountability = { version = "0.1.5", path = "../csv-accountability" }

[dev-dependencies]
csv-testkit = { version = "0.1.5", path = "../csv-testkit" }
ed25519-dalek = "2.0"
hex = "0.4"
serde_json = "1.0"

[lints]
workspace = true
