[package]
name = "csv-accountability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Pure accountability protocol semantics for Parwana"

[features]
default = []

[dependencies]
csv-hash = { version = "0.1.5", path = "../csv-hash" }
csv-codec = { version = "0.1.5", path = "../csv-codec" }

[lints]
workspace = true
