[package]
name = "csv-adapter-factory"
version = "0.1.5"
edition = "2024"
rust-version.workspace = true

[dependencies]
csv-protocol = { version = "0.1.5", path = "../csv-protocol" }
csv-adapter-core = { version = "0.1.5", path = "../csv-adapters/csv-adapter-core" }
csv-hash = { version = "0.1.5", path = "../csv-hash" }
csv-keys = { version = "0.1.5", path = "../csv-keys" }
csv-bitcoin = { version = "0.1.5", path = "../csv-adapters/csv-bitcoin", optional = true, features = ["signet-rest"] }
csv-ethereum = { version = "0.1.5", path = "../csv-adapters/csv-ethereum", optional = true }
csv-sui = { version = "0.1.5", path = "../csv-adapters/csv-sui", optional = true, features = ["rpc"] }
csv-aptos = { version = "0.1.5", path = "../csv-adapters/csv-aptos", optional = true, features = ["rpc"] }
csv-solana = { version = "0.1.5", path = "../csv-adapters/csv-solana", optional = true }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
thiserror = "1.0"
hex = "0.4"
log = "0.4"
secp256k1 = { version = "0.28", features = ["global-context"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"], optional = true }
bs58 = { version = "0.5", optional = true }
blake2 = { version = "0.10", optional = true }

[features]
bitcoin = ["csv-bitcoin"]
ethereum = ["csv-ethereum", "csv-ethereum/rpc"]
solana = ["csv-solana", "ed25519-dalek", "bs58"]
sui = ["csv-sui", "ed25519-dalek", "blake2"]
aptos = ["csv-aptos"]
default = []

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
