[package]
name = "csv-algebra"
version = "0.1.5"
edition = "2024"
rust-version.workspace = true

[dependencies]
# Zero runtime dependencies.
# alloc is available via extern crate alloc.
# Any addition here that requires std will break the #![no_std] compile.

[features]
default = []
# std feature is ONLY for test harness compatibility — never enabled in production
std = []
