[package]
name = "csv-cli"
version = "0.1.5"
edition = "2024"
description = "CLI tool for CSV Adapter — cross-chain Sanads, proofs, wallets, and end-to-end testing"
license = "MIT OR Apache-2.0"
authors = ["Amin Razavi"]
repository = "https://github.com/diewan/parwana"
homepage = "https://github.com/diewan/parwana"
documentation = "https://github.com/diewan/parwana/blob/main/csv-cli/README.md"
readme = "README.md"
keywords = ["cli", "blockchain", "cryptography", "csv-validation", "cross-chain"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]
publish = true
rust-version.workspace = true

[[bin]]
name = "csv"
path = "src/main.rs"

[dependencies]
# Phase 5 Compliant: Use only runtime and core types
# No direct chain adapter dependencies - all operations go through csv-adapter
csv-sdk = { version = "0.1.5", path = "../csv-sdk", features = ["accountability", "bitcoin", "ethereum", "sui", "aptos", "solana", "rpc", "runtime-coordinator"] }
csv-protocol = { version = "0.1.5", path = "../csv-protocol" }
csv-wire = { version = "0.1.5", path = "../csv-wire" }
csv-codec = { version = "0.1.5", path = "../csv-codec" }
csv-verifier = { version = "0.1.5", path = "../csv-verifier" }
csv-algebra = { version = "0.1.5", path = "../csv-algebra" }
csv-hash = { version = "0.1.5", path = "../csv-hash" }
csv-proof = { version = "0.1.5", path = "../csv-proof" }
csv-schema = { version = "0.1.5", path = "../csv-schema" }
csv-store = { version = "0.1.5", path = "../csv-store", features = ["clap"] }
csv-keys = { version = "0.1.5", path = "../csv-keys" }
csv-runtime = { version = "0.1.5", path = "../csv-runtime" }
csv-adapter-factory = { version = "0.1.5", path = "../csv-adapter-factory", features = ["bitcoin", "ethereum", "sui", "aptos", "solana"] }
csv-admission = { version = "0.1.5", path = "../csv-admission" }
csv-observability = { version = "0.1.5", path = "../csv-observability" }
csv-content = { version = "0.1.5", path = "../csv-content" }
csv-wallet = { version = "0.1.5", path = "../csv-wallet" }

# CLI framework and utilities (no chain-specific crypto)
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
# HTTP server for the remote chain-dispatch host endpoint (`csv runtime serve`).
axum = { version = "0.7", default-features = false, features = ["http1", "tokio"] }
hex = "0.4"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
async-trait = "0.1"
dirs = "5.0"
colored = "2.0"
toml = "0.8"
chrono = "0.4"
tracing = "0.1"
bs58 = "0.5"

# Cryptography dependencies for wallet key generation
sha2 = "0.10"
sha3 = "0.10"
blake2 = "0.10"
typenum = "1.17"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
secp256k1 = { version = "0.28", features = ["rand-std"] }
rand = "0.8"

# State file encryption
aes-gcm = { version = "0.10", features = ["std"] }
aead = "0.5"
argon2 = { version = "0.5", features = ["std"] }
base64 = "0.21"

# Secret handling: hidden terminal prompts (no echo, no shell history) and
# zeroize-on-drop buffers for mnemonics and wallet-file passphrases.
rpassword = "7"
zeroize = "1"

# HTTP client for RPC calls
reqwest = { version = "0.12", features = ["json", "blocking"] }
thiserror = "1.0"

# Solana SDK for PDA derivation in on-chain status checks
solana-sdk = "3.0"

[dev-dependencies]
tempfile = "3.0"

[lints]
workspace = true

[features]
default = []
runtime-coordinator = []
