[package]
name = "csv-codec"
version = "0.1.5"
edition = "2024"
rust-version.workspace = true
description = "CSV Codec - Canonical serialization, deterministic decoding, schema validation, byte ordering"

[dependencies]
ciborium = "0.2"
serde = { version = "1.0", features = ["derive"] }
crc32fast = "1.3"
thiserror = "1.0"
sha2 = "0.10"
unicode-normalization = "0.1"

[lints]
workspace = true
