[package]
name = "csv-contract-bindings"
version = "0.1.5"
edition = "2024"
description = "CSV Contract Bindings - Type-safe smart contract ABI bindings for all supported chains"

[dependencies]
csv-hash = { path = "../csv-hash", features = ["serde"] }
csv-wire = { path = "../csv-wire" }
csv-codec = { path = "../csv-codec" }
csv-keys = { path = "../csv-keys" }
csv-protocol = { path = "../csv-protocol" }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
