[package]
name = "csv-contract-bindings"
version = "0.1.5"
edition = "2024"
rust-version.workspace = true
description = "CSV Contract Bindings - Type-safe smart contract ABI bindings for all supported chains"

[dependencies]
csv-hash = { version = "0.1.5", path = "../csv-hash", features = ["serde"] }
csv-wire = { version = "0.1.5", path = "../csv-wire" }
csv-codec = { version = "0.1.5", path = "../csv-codec" }
csv-keys = { version = "0.1.5", path = "../csv-keys" }
csv-protocol = { version = "0.1.5", path = "../csv-protocol" }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
