[package]
name = "csv-coordinator"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[dependencies]
csv-protocol = { path = "../csv-protocol" }
csv-verifier = { path = "../csv-verifier" }
# default-features off so RocksDB (native C++) does not leak into the wasm build of
# downstream csv-runtime; coordinator does not use the RocksDB backend directly.
csv-storage = { path = "../csv-storage", default-features = false }
csv-hash = { path = "../csv-hash" }
csv-keys = { path = "../csv-keys" }
csv-wallet = { path = "../csv-wallet" }
# Chain adapters (coordinator can depend on these, runtime cannot)
csv-bitcoin = { path = "../csv-adapters/csv-bitcoin", optional = true }
csv-ethereum = { path = "../csv-adapters/csv-ethereum", optional = true }
csv-sui = { path = "../csv-adapters/csv-sui", optional = true }
csv-aptos = { path = "../csv-adapters/csv-aptos", optional = true }
csv-solana = { path = "../csv-adapters/csv-solana", optional = true }
bitcoin = { version = "0.32", features = ["serde", "rand"], optional = true }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
thiserror = "1.0"
anyhow = "1"
tracing = "0.1"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
async-trait = "0.1"

[features]
default = ["bitcoin"]
bitcoin = ["dep:csv-bitcoin", "csv-bitcoin/signet-rest", "dep:bitcoin"]
ethereum = ["dep:csv-ethereum"]
sui = ["dep:csv-sui"]
aptos = ["dep:csv-aptos"]
solana = ["dep:csv-solana"]
