[package]
name = "csv-coordinator"
version = "0.1.5"
edition = "2024"
rust-version.workspace = true

[dependencies]
csv-protocol = { version = "0.1.5", path = "../csv-protocol" }
csv-verifier = { version = "0.1.5", path = "../csv-verifier" }
# default-features off so the redb persistence backend does not leak into the wasm
# build of downstream csv-runtime; coordinator does not use the redb backend directly.
csv-storage = { version = "0.1.5", path = "../csv-storage", default-features = false }
csv-hash = { version = "0.1.5", path = "../csv-hash" }
thiserror = "1.0"
anyhow = "1"
tracing = "0.1"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
async-trait = "0.1"

# tokio's multi-threaded runtime does not compile on wasm32-unknown-unknown; only
# sync, macros, io-util, rt, and time are supported there (enforced by a
# compile_error! inside tokio). Same tokio version, per-target feature sets.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", default-features = false, features = ["sync", "macros", "rt", "time"] }
