[package]
name = "csv-core"
version = "0.1.0"
edition = "2024"
description = "Chain-agnostic core traits and types for CSV (Client-Side Validation) protocol"
license = "MIT OR Apache-2.0"
authors = ["Amin Razavi"]
repository = "https://github.com/Diewan/csv-core"
homepage = "https://github.com/Diewan/csv-core"
documentation = "https://docs.rs/csv-core"
readme = "README.md"
keywords = ["blockchain", "cryptography", "csv-validation", "cross-chain", "smart-contracts"]
categories = ["cryptography::cryptocurrencies", "authentication"]
publish = true
rust-version = "1.93"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
csv-observability = { path = "../csv-observability", optional = true }
csv-hash = { path = "../csv-hash", features = ["std"] }
csv-proof = { path = "../csv-proof" }
csv-content = { path = "../csv-content" }
csv-codec = { path = "../csv-codec" }
csv-protocol = { path = "../csv-protocol" }
csv-contract-bindings = { path = "../csv-contract-bindings" }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
ciborium = { version = "0.2", default-features = false }
toml = { version = "0.8", default-features = false, features = ["parse"], optional = true }
bincode = "1.3"
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
thiserror = "1.0"
hex = { version = "0.4", default-features = false, features = ["serde"] }
async-trait = "0.1"
log = { version = "0.4", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
# bitcoin = { version = "0.30", optional = true }  # REMOVED: chain-specific, should be in adapter
# secp256k1 = { version = "0.28", features = ["rand-std"], optional = true }  # REMOVED: chain-specific
# ed25519-dalek = { version = "2.0", features = ["rand_core"] }  # REMOVED: moved to csv-protocol
bloomfilter = { version = "3.0", default-features = false }
# crc32fast = { version = "1.3", default-features = false }  # REMOVED: not used
spin = "0.9"
lazy_static = "1.4"
# pqcrypto-dilithium = { version = "0.5", optional = true }  # REMOVED: moved to csv-protocol
# pqcrypto-traits = { version = "0.3", optional = true }  # REMOVED: moved to csv-protocol
# curve25519-dalek = { version = "4", optional = true, default-features = false, features = ["alloc", "rand_core"] }  # REMOVED: moved to csv-protocol
# rand_core = { version = "0.6", optional = true }  # REMOVED: moved to csv-protocol
# RPC dependencies removed - core should not have RPC access per implementation.md
# reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
# url = { version = "2.5", optional = true }
# tokio = { version = "1", features = ["rt", "macros", "time"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

[features]
default = ["std"]
std = ["serde/std", "dep:toml", "sha2/std", "hex/std"]
# Chain-specific features moved to chain adapters - removed from core
# tapret = ["dep:bitcoin", "secp256k1"]  # MOVED: should be in csv-bitcoin adapter
# bitcoin = ["secp256k1"]  # MOVED: should be in csv-bitcoin adapter
# solana = []  # MOVED: should be in csv-solana adapter
# aptos = []  # MOVED: should be in csv-aptos adapter
# sui = []  # MOVED: should be in csv-sui adapter
# ethereum = ["secp256k1"]  # MOVED: should be in csv-ethereum adapter
# secp256k1 = ["dep:secp256k1"]  # REMOVED: chain-specific
# pq = ["dep:pqcrypto-dilithium", "dep:pqcrypto-traits"]  # REMOVED: moved to csv-protocol
# zk = ["dep:curve25519-dalek", "dep:rand_core"]  # REMOVED: moved to csv-protocol
# quorum = ["dep:reqwest", "dep:url", "dep:tokio"]  # MOVED: RPC should not be in core
observability = ["dep:csv-observability"]
# full = ["bitcoin", "solana", "aptos", "sui", "ethereum", "pq", "zk", "quorum", "observability"]  # REMOVED: chain-specific
full = ["observability"]
experimental = []
adversarial-tests = []

[dev-dependencies]
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = "0.8"
proptest = "1.4"
tempfile = "3.8"
tokio = { version = "1", features = ["macros", "rt", "time"] }
# secp256k1 = { version = "0.28", features = ["rand-std"] }  # REMOVED: chain-specific
toml = { version = "0.8", features = ["parse", "display"] }
trybuild = "1.0"
csv-algebra = { path = "../csv-algebra" }

[[example]]
name = "basic_sanad"
path = "examples/basic_sanad.rs"

[[example]]
name = "commitment_chain"
path = "examples/commitment_chain.rs"

# Temporarily disabled due to API migration
# [[bin]]
# name = "generate_golden_fixtures"
# path = "bin/generate_golden_fixtures.rs"

[lints]
workspace = true
