[package]
name = "csv-examples"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
csv-sdk = { path = "../csv-sdk", features = ["all-chains", "tokio"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

# Getting started examples
[[example]]
name = "subscriptions"
path = "getting-started/subscriptions.rs"

# Advanced examples
[[example]]
name = "gaming"
path = "advanced/gaming.rs"

[[example]]
name = "parallel_verification"
path = "advanced/parallel_verification.rs"

[[example]]
name = "performance"
path = "advanced/performance.rs"
