[package]
name = "csv-examples"
version = "0.1.5"
edition = "2024"
rust-version.workspace = true
publish = false

[dependencies]
csv-sdk = { version = "0.1.5", path = "../csv-sdk", features = ["all-chains", "tokio"] }
csv-protocol = { version = "0.1.5", path = "../csv-protocol" }
csv-hash = { version = "0.1.5", path = "../csv-hash" }
csv-keys = { version = "0.1.5", path = "../csv-keys" }
hex = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Getting started examples
[[example]]
name = "subscriptions"
path = "getting-started/subscriptions.rs"

# Advanced examples
[[example]]
name = "gaming"
path = "advanced/gaming.rs"

[[example]]
name = "parallel_verification"
path = "advanced/parallel_verification.rs"

[[example]]
name = "performance"
path = "advanced/performance.rs"
