[package]
name = "csv-hash"
version = "0.1.0"
edition = "2024"
description = "CSV Hash - Hash registry, tagged hashing, domain separation, Merkle construction, proof commitments"

[dependencies]
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1"
ciborium = "0.2"
crc32fast = "1.3"
bloomfilter = { version = "3.0", optional = true }
csv-codec = { path = "../csv-codec" }

[features]
default = []
std = ["bloomfilter"]

[lints]
workspace = true
