[package]
name = "csv-hash"
version = "0.1.0"
edition = "2024"
description = "CSV Hash - Hash registry, tagged hashing, domain separation, Merkle construction, proof commitments"

[dependencies]
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4.3"
thiserror = "1"
anyhow = "1"
ciborium = "0.2"
crc32fast = "1.3"
bloomfilter = { version = "3.0", optional = true }
csv-codec = { path = "../csv-codec" }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]

[package.metadata.cargo-machete]
ignored = ["serde"]

[features]
default = []
std = ["bloomfilter"]
# Enable serde derives for hash types (for serialization in non-critical paths)
serde = ["dep:serde"]

[lints]
workspace = true
