[package]
name = "csv-observability"
version = "0.1.0"
edition = "2024"
description = "Chain-agnostic core traits and types for CSV (Client-Side Validation) protocol"
license = "MIT OR Apache-2.0"
authors = ["Amin Razavi"]
repository = "https://github.com/Diewan/csv-observability"
homepage = "https://github.com/Diewan/csv-observability"
documentation = "https://docs.rs/csv-observability"
readme = "README.md"
keywords = ["blockchain", "cryptography", "csv-validation", "cross-chain", "smart-contracts"]
categories = ["cryptography::cryptocurrencies", "authentication"]
publish = true
rust-version = "1.95"

[dependencies]
csv-protocol = { path = "../csv-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }

[features]
default = []
