[package]
name = "csv-observability"
version = "0.1.5"
edition = "2024"
description = "Chain-agnostic core traits and types for CSV (Client-Side Validation) protocol"
license = "MIT OR Apache-2.0"
authors = ["Amin Razavi"]
repository = "https://github.com/Diewan/csv-observability"
homepage = "https://github.com/Diewan/csv-observability"
documentation = "https://docs.rs/csv-observability"
readme = "README.md"
keywords = ["blockchain", "cryptography", "csv-validation", "cross-chain", "smart-contracts"]
categories = ["cryptography::cryptocurrencies", "authentication"]
publish = true
rust-version.workspace = true

[dependencies]
csv-protocol = { version = "0.1.5", path = "../csv-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }

# Workspace tokio enables rt-multi-thread, which does not compile on
# wasm32-unknown-unknown; this crate only needs tokio::sync.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", default-features = false, features = ["sync", "macros", "rt", "time"] }
getrandom = { version = "0.2", features = ["js"] }

[features]
default = []
