[package]
name = "csv-p2p"
version = "0.1.5"
edition = "2024"
rust-version.workspace = true
description = "P2P proof transport layer for CSV protocol using Nostr"
license = "MIT OR Apache-2.0"
authors = ["Amin Razavi"]

[dependencies]
csv-hash = { version = "0.1.5", path = "../csv-hash" }
csv-codec = { version = "0.1.5", path = "../csv-codec" }
csv-proof = { version = "0.1.5", path = "../csv-proof" }
csv-protocol = { version = "0.1.5", path = "../csv-protocol" }
csv-wire = { version = "0.1.5", path = "../csv-wire" }
tokio = { workspace = true, optional = true }
tokio-stream = "0.1"
parking_lot = "0.12"
rand = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
nostr-sdk = { version = "0.33", optional = true }
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4", optional = true }
futures = "0.3"
dirs-next = "2.0"
reqwest = { version = "0.12", optional = true, features = ["multipart"] }

[features]
default = ["nostr"]
nostr = ["dep:nostr-sdk", "dep:tokio", "dep:chrono"]
ipfs = ["dep:reqwest"]
