[package]
name = "csv-protocol"
version = "0.1.0"
edition = "2024"
description = "CSV Protocol - State machines, protocol constants, types, invariants, replay semantics, transition legality, versioning"

[dependencies]
hex = "0.4"
csv-hash = { path = "../csv-hash", features = ["serde"] }
csv-codec = { path = "../csv-codec" }
csv-keys = { path = "../csv-keys" }
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
log = "0.4"
tracing = "0.1"
sha2 = "0.10"
sha3 = "0.10"
blake2 = "0.10"
tiny-keccak = { version = "2.0", features = ["keccak"] }
ciborium = "0.2"
chrono = "0.4"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"
zeroize = "1.5"
ed25519-dalek = { version = "2", optional = true }
secp256k1 = { version = "0.28", optional = true }
pqcrypto-dilithium = { version = "0.5", optional = true }
pqcrypto-traits = { version = "0.3", optional = true }

[features]
default = ["ed25519", "secp256k1"]
ed25519 = ["ed25519-dalek"]
secp256k1 = ["dep:secp256k1"]
pq = ["pqcrypto-dilithium", "pqcrypto-traits"]
std = []
experimental = []

[dev-dependencies]
csv-hash = { path = "../csv-hash", features = ["serde"] }
csv-codec = { path = "../csv-codec" }
hex = "0.4"
rand = "0.8"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"

[[test]]
name = "golden_vectors"
path = "tests/golden_vectors.rs"

[[test]]
name = "protocol_constitution"
path = "tests/protocol_constitution.rs"

[lints]
workspace = true
